# data-scientist-credit-risk

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ui  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: Senior_Data_Scientist_Assessment_Data (1) (1) (1) (1).xlsx
docker/: entrypoint-api.sh  entrypoint-db-init.sh  nginx.conf
docs/: DOCKER.md  architecture.md  assumptions.md  business_context.md  fact_lead_funnel_population_guide.md  future_improvements.md  methodology.md  part2_predictive_modelling_plan.md  story_telling_blueprint.md
notebooks/: 01_data_understanding.ipynb  02_eda_business_storytelling.ipynb  03_feature_engineering.ipynb  04_customer_segmentation.ipynb  05_marketing_strategy.ipynb  06_credit_risk_analysis.ipynb  07_model_evaluation.ipynb  08_ai_self_service_platform_poc.ipynb
scripts/: analyze_growth_ops.py  check_dictionaries.py  check_marts.py  docker-push.ps1  generate_charts.py  init_clickhouse_schema.py  inspect_backlog_leads.py  inspect_clickhouse.py  inspect_customer_timeline.py  inspect_db_details.py  inspect_excel.py  inspect_installations.py  inspect_more_details.py  inspect_notebook_markdown.py  inspect_raw_dates.py  inspect_tables.py  load_clickhouse_from_excel.py  populate_fact_lead_funnel.py  populate_marts.py  probe_schemas.py  recreate_marts.py  run_analytical_report.py  run_part2_pipeline.py  test_selects.py  test_streaming.py
tests/: test_ai_platform.py  test_api.py  test_data_validation.py  test_echarts_tools.py  test_feature_engineering.py  test_model_training.py  (+1 more)
(+146 files in other folders)
